--- a/Changes
+++ b/Changes
@@ -2,6 +2,15 @@
 Revision history for Perl extension Net::SSH::AuthorizedKeysFile
 ######################################################################
 
+0.03  2008/08/24
+    (ms) Rewrote entire parsing code to comply with ssh spec, thanks to 
+         Tobias Galitzien for the pointer.
+    (ms) Ignore comment lines in authorized_keys files
+    (ms) The 'email' field is now call 'comment' ('email' is still available 
+         for backwards compatibility, though).
+    (ms) Comments can now contain blanks and commas without tripping the
+         parser up.
+
 0.02  2005/12/23
     (ms) Fixed dependencies
 
