--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@
 Revision history for Perl extension Net::SSH::AuthorizedKeysFile
 ######################################################################
 
+0.11  (2009/11/30)
+    (ms) Documentation fixes
+    (ms) Added github repo link to Makefile.PL
+
 0.10  2009/11/15
     (ms) Complete rewrite of parsers and classes
     (ms) No longer supporting multi-line keys
