--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@
 Revision history for Perl extension Net::SSH::AuthorizedKeysFile
 ######################################################################
 
+0.12  (2010/02/22)
+    (ms) Added test cases with weird keys
+    (ms) Deleting undefined/empty options to avoid warnings
+
 0.11  (2009/11/30)
     (ms) Documentation fixes
     (ms) Added github repo link to Makefile.PL
