--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ######################################################################
-    Net::SSH::AuthorizedKeysFile 0.12
+    Net::SSH::AuthorizedKeysFile 0.13
 ######################################################################
 
 NAME
@@ -46,15 +46,29 @@ METHODS
         two parsers accepts. If you want it to be stricter, set
 
             Net::SSH::AuthorizedKeysFile->new( file   => "authkeys_file",
-                                               strict => 1 );
+                                               abort_on_error => 1 );
 
-        and read will immediately abort after the first faulty line.
+        and read will immediately abort after the first faulty line. Also,
+        the key parsers are fairly lenient in default mode. Adding
+
+            strict => 1
+
+        adds sanity checks before a key is accepted.
 
     "read"
         Reads in the file defined by new(). By default, strict mode is off
         and read() will silently ignore faulty lines. If it's on (see new()
         above), read() will immediately abort after the first faulty line. A
         textual description of the last error will be available via error().
+
+    "content"
+        Contains the original file content, read by "read()" earlier. Can be
+        used to set arbitrary content:
+
+            $keysfile->content( "some\nrandom\nlines\n" );
+
+        and have "parse()" operate on a string instead of an actual file
+        this way.
 
     "keys"
         Returns a list of Net::SSH::AuthorizedKey objects. Methods are
@@ -73,6 +87,23 @@ METHODS
         instead of the file the data was read from originally. Returns 1 if
         successful, and undef on error. In case of an error, error()
         contains a textual error description.
+
+    "sanity_check"
+        Run a sanity check on the currently selected authorized_keys file.
+        If it contains insanely long lines, then parsing with read() (and
+        potential crashes because of out-of-memory errors) should be
+        avoided.
+
+    "ssh_dir( [$user] )"
+        Locate the .ssh dir of a given user. If no user name is given,
+        ssh_dir will look up the .ssh dir of the effective user. Typically
+        returns something like "/home/gonzo/.ssh".
+
+    "path_locate( [$user] )"
+        Locate the authorized_keys file of a given user. Typically returns
+        something like "/home/gonzo/.ssh/authorized_keys". See "ssh_dir()"
+        for how the containing directory is located with and without a given
+        user name.
 
     "error"
         Description of last error that occurred.
