--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@
 Revision history for Perl extension Net::SSH::AuthorizedKeysFile
 ######################################################################
 
+0.14  (12/20/2010)
+    (ms) Preserve order of options
+    (ms) Bug fix: Binary options no longer expand as xxx="1" in as_string()
+
 0.13  (2010/04/25)
     (ms) Moved ssh1 and ssh2 docs to base class.
     (ms) Added sanity check for files with extreme line lengths
