--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@
 Revision history for Perl extension Net::SSH::AuthorizedKeysFile
 ######################################################################
 
+0.15  (02/16/2011)
+    (ms) No longer using $& to eliminate both real and imaginary
+         performance penalties.
+
 0.14  (12/20/2010)
     (ms) Preserve order of options
     (ms) Bug fix: Binary options no longer expand as xxx="1" in as_string()
